# OLIPlatform

src/MatchingEngineLib/: CMakeLists.txt  MEFactory.cpp  MEFactory.h  MEOrderBookCache.cpp  MEOrderBookCache.h  METransportAdaptor.cpp  METransportAdaptor.h  MatchAggressorOrder.cpp  MatchAggressorOrder.h  MatchMarketOrder.cpp  MatchMarketOrder.h  MatchingEngine.cpp  MatchingEngine.h  MatchingEngineDef.h  MatchingEngineDispatcher.cpp  MatchingEngineDispatcher.h  PriceLevelContainer.cpp  PriceLevelContainer.h
src/MatchingEngineTest/: CMakeLists.txt  MatchAggressorOrderTest.cpp  MatchMarketOrderTest.cpp  MatchingEngineLibTest.cpp  MatchingEnginePerfTest.cpp  MatchingEngineTest.cpp  PriceLevelContainerTest.cpp  PriceLevelContainerTestPerf.cpp
src/MessagesLib/: CMakeLists.txt  MessagesLib.mk  MessagesLib.project  MessagesLib.txt
src/MessagesLib/src/: InMessageWrapper.cpp  InMessageWrapper.h  MessageBase.cpp  MessageBase.h  MessageLib.cpp  MsgHelpers.cpp  MsgHelpers.h  OutMessageWrapper.cpp  OutMessageWrapper.h
src/MessagesLib/src/ClntMessages/: ClntNewOrderRequestMsg.cpp  ClntNewOrderRequestMsg.h
src/MessagesLib/src/protobuf/: oli_messageslib.pb.cc  oli_messageslib.pb.h  oli_messageslib.proto
src/OMSService/: OMSLib.mk  OMSLib.project  OMSLib.txt  OMSLibTest.mk  OMSLibTest.project  OMSLibTest.txt
src/OMSService/src/: OMSDataCache.cpp  OMSDataCache.h  OMSDefinesInt.h  OMSMessageDispatcher.cpp  OMSMessageDispatcher.h  OMSService.cpp  OMSService.h  OrderExpirationController.cpp  OrderExpirationController.h
src/OMSService/src/StateMachine/: OMSEvents.h  OMSStateMachine.cpp  OMSStateMachine.h  OMSStateMachineImpl.cpp  OMSStateMachineImpl.h  OMSStates.h
src/OrderBookLib/: CMakeLists.txt  OBProcessor.cpp  OBProcessor.h  OBProcessorFactory.cpp  OBProcessorFactory.h  OBTransportAdaptor.cpp  OBTransportAdaptor.h  OrderBookDef.h  OrderBookDispatcher.cpp  OrderBookDispatcher.h
src/OrderBookTest/: CMakeLists.txt  obDispatcherTest.cpp  obProcessorTest.cpp  orderBookTest.cpp
src/SecMasterCacheLib/: CMakeLists.txt  InstrumentDispatcher.cpp  InstrumentDispatcher.h  SecMasterDef.h
src/TransportLayerLib/: TransportLayerLib.mk  TransportLayerLib.project  TransportLayerLib.txt  TransportLayerLibTest.mk  TransportLayerLibTest.project
src/TransportLayerLib/src/: ChannelFactory.cpp  ChannelFactory.h  TLChannel.cpp  TLChannel.h  TLOutStorage.cpp  TLOutStorage.h  TLXMLConfigParser.cpp  TLXMLConfigParser.h  TlInStorage.cpp  TlInStorage.h  TransportLayer.cpp  TransportLayer.h  TransportLayerDef.h  TransportLayerImplDef.h
src/UtilsLib/: CMakeLists.txt  FileLogger.cpp  FileLogger.h  UtilsLib.mk  UtilsLib.project  UtilsLibTest.mk  UtilsLibTest.project
src/include/: Include.mk  Include.project  OLI_FinanceDomain.h  OLI_Logger.h  OLI_MsgDefines.h  OLI_TransportLayerDef.h  OLI_UtilsDefines.h
